# librcrypto

./: .gitignore  .gitmodules  Cargo.toml  a.rs  rcrypto.h
.github/workflows/: ci.yaml
generate-bindings/: Cargo.toml
generate-bindings/src/: main.rs
rcrypto/: Cargo.toml
rcrypto-cli/: Cargo.toml
rcrypto-lib/: Cargo.toml  my-file
rcrypto-lib/src/: lib.rs
rcrypto-sys/: .clangd  Cargo.toml  build.rs
rcrypto-sys/src/: aeads.rs  b64.rs  kdf.rs  lib.rs  zeroize.rs
rcrypto-sys/tests/: Makefile  aead.c  b64.c  c_runner.rs  pwhash.c  zeroize.c
rcrypto-sys/tests/c/: Makefile  test_framework.c  test_framework.h  unity_framework.h
rcrypto/src/: lib.rs
test-c/: Makefile  unity_framework.c  unity_framework.h
test-c/test/: aead.c  b64.c  pwhash.c
