[package]
name = "rcrypto-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
aead = { version = "0.5.2", features = ["getrandom"] }
aes-gcm = "0.10.3"
chacha20poly1305 = { version = "0.10.1", default-features = false }
crypto_secretbox = { version = "0.1.1", default-features = false, features = ["salsa20"] }
paste = "1.0.14"
