[package]
name = "rcrypto-sys"
version = "0.1.0"
edition = "2021"

[lib]
# crate-type = ["cdylib"]
# FIXME: how do we make this cdylib only?
crate-type = ["cdylib", "rlib"]

[dependencies]
aead = { version = "0.5.2", features = ["getrandom"] }
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes"] }
argon2 = { version = "0.5.2", default-features = false, features = ["password-hash", "alloc"] }
base64ct = "1.6.0"
chacha20poly1305 = { version = "0.10.1", default-features = false }
crypto_secretbox = { version = "0.1.1", default-features = false, features = ["salsa20"] }
paste = "1.0.14"
zeroize = { version = "1.6.0", default-features = false }

[features]
default = ["std"]
std = []

[build-dependencies]
indoc = "2.0.4"
