[package]
name = "rcrypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = { version = "0.5.2", features = ["getrandom"] }
aes-gcm = "0.10.3"
chacha20poly1305 = { version = "0.10.1", default-features = false }

[build-dependencies]
cbindgen = { version = "0.26.0", default-features = false }
